Use java8
* Use java8 so we can run can generate on data-proc for now
* Generate while writing
* Command line option for rowGroupSize